<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/primaryLightColor"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/nextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/currentMonth"
            app:layout_constraintEnd_toEndOf="@+id/calendarView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/currentMonth"
            app:layout_constraintTop_toTopOf="@+id/currentMonth"
            app:srcCompat="@drawable/ic_baseline_navigate_next_24"
            app:tint="@color/primaryColor" />

        <com.kizitonwose.calendarview.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_marginTop="12dp"
            app:cv_dayViewResource="@layout/calendar_day_layout"
            app:cv_inDateStyle="allMonths"
            app:cv_maxRowCount="6"
            app:cv_orientation="horizontal"
            app:cv_outDateStyle="endOfRow"
            app:cv_scrollMode="paged"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beforeMonth"
            tools:layout_height="300dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/calendarView"
            app:layout_constraintTop_toBottomOf="@+id/todayButton"
            app:srcCompat="@drawable/ic_baseline_access_time_24"
            app:tint="@color/primaryColor" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/time"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/selectedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/time"
            app:layout_constraintEnd_toEndOf="@+id/calendarView"
            app:layout_constraintTop_toTopOf="@+id/time" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/ic_baseline_add_alert_24"
            app:tint="@color/primaryColor" />

        <TextView
            android:id="@+id/reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/reminder"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/selectedReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintBottom_toBottomOf="@+id/reminder"
            app:layout_constraintEnd_toEndOf="@+id/selectedTime"
            app:layout_constraintTop_toTopOf="@+id/reminder" />

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/cancel"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/doneButton"
            app:layout_constraintEnd_toStartOf="@+id/doneButton"
            app:layout_constraintTop_toTopOf="@+id/doneButton" />

        <TextView
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/done"
            android:textColor="@color/primaryDarkColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/selectedReminder"
            app:layout_constraintTop_toBottomOf="@+id/selectedReminder" />

        <TextView
            android:id="@+id/todayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/primaryDarkColor"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:text="@string/today"
            android:textColor="@color/primaryLightColor"
            app:layout_constraintStart_toStartOf="@+id/calendarView"
            app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        <TextView
            android:id="@+id/threeDaysButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/secondaryDarkColor"
            android:paddingStart="12dp"
            android:paddingTop="6dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:text="@string/_3_days_latter"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintStart_toEndOf="@+id/todayButton"
            app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        <ImageView
            android:id="@+id/beforeMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/currentMonth"
            app:layout_constraintEnd_toStartOf="@+id/currentMonth"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/calendarView"
            app:layout_constraintTop_toTopOf="@+id/currentMonth"
            app:srcCompat="@drawable/ic_baseline_navigate_before_24"
            app:tint="@color/primaryColor" />

        <TextView
            android:id="@+id/currentMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="@+id/calendarView"
            app:layout_constraintStart_toStartOf="@+id/calendarView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="January, 2021" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>